@@ -12,10 +12,42 @@ This item requires eight copper ingots and one lapis lazuri. To get the recipe i
 
 ## New Blocks
 
+### Armor Storage
+Armor storage allows save armors. It can allows store 54 items of only one type (enchanted or not). Can craft an armor storage that supports more than one type.
+
+This block considers as armor the boots, leggings, chestplate, helmet, saddles, elytras, horse armors and wolf armors. It has four types variants to store one, two, three and four armor types in the same storage.
+
+#### Crafting
+The armor storage that stores only one armor type requires four blocks of blackstone, one piston, two copper ingot, one chest and one NeoTool item.
+
+The armor storage that stores two armor types requires four blocks of blackstone, two copper ingot, two armor storage of one type and one piston.
+
+The armor storage that stores three armor types requires three blocks of blackstone, two copper ingot, three armor storage of one type and one piston.
+
+The armor storage that stores four armor types requires two blocks of blackstone, two copper ingot, four armor storage of one type and one piston.
+
+To get the recipe of one armor type is required to have blocks of blackstone, and the NeoTool item in the inventory, once get this item, the other recipes will be get.
+
+### Storage (Other Storage)
+Other storage allows save other kinds of individuals items. It can allows store 54 items of only one type. Can craft an other storage that supports more than one type.
+
+This block considers as the following list of items to store: flint and steels, filled maps, goat horns, soups, potions, totems, spy glasses and writable books. It has four types variants to store one, two, three and four types in the same storage.
+
+#### Crafting
+The storage that stores only one type requires two blocks of sand, two blocks of red sand, one piston, two copper ingot, one chest and one NeoTool item.
+
+The storage that stores two types requires two blocks of sand, two blocks of red sand, two copper ingot, two armor storage of one type and one piston.
+
+The storage that stores three types requires two blocks of sand, one block of red sand, two copper ingot, three armor storage of one type and one piston.
+
+The storage that stores four types requires one block of sand, one block of red sand, two copper ingot, four armor storage of one type and one piston.
+
+To get the recipe of one type is required to have blocks of sand or red sand, and the NeoTool item in the inventory, once get this item, the other recipes will be get.
+
 ### Tool Storage
 Tool storage allows save tools. It can allows store 54 items of only one type (enchanted or not). Can craft a tool storage that supports more than one type.
 
-This block considers as tool the pickaxes, axes, sholves, hoes, fishing rodes, brushes and shears items. It has four types variants to store one, two, three and four tool types in the same storage.
+This block considers as tool the pickaxes, axes, sholves, hoes, fishing rodes, bundles, brushes and shears items. It has four types variants to store one, two, three and four tool types in the same storage.
 
 #### Crafting
 The tool storage that stores only one tool type requires two blocks of andesite, two blocks of diorite, one piston, two copper ingot, one chest and one NeoTool item.
@@ -31,7 +63,7 @@ To get the recipe of one tool type is required to have blocks of andesite or dio
 ### Weapon Storage
 Weapon storage allows save weapons. It can allows store 54 items of only one type (enchanted or not). Can craft a tool storage that supports more than one type.
 
-This block considers as weapon the swords, bows, crossbows, tridents and shields items. It has four types variants to store one, two, three and four weapon types in the same storage.
+This block considers as weapon the swords, bows, crossbows, tridents, mace and shields items. It has four types variants to store one, two, three and four weapon types in the same storage.
 
 #### Crafting
 The weapon storage that stores only one weapon type requires four stones, one piston, two iron ingot, one chest and one NeoTool item.
