@@ -3,6 +3,7 @@
   "values": [
     "#minecraft:enchantable/armor",
     "#neostorage:saddles",
+    "#neostorage:elytras",
     "#neostorage:wolf_armors",
     "#neostorage:horse_armors"
   ]
