@@ -6,6 +6,8 @@
     "#neostorage:goat_horns",
     "#neostorage:soups",
     "#neostorage:potions",
-    "#neostorage:totems"
+    "#neostorage:totems",
+    "#neostorage:spyglasses",
+    "#neostorage:writable_books"
   ]
 }
